# Crayon

./: .gitignore  CMakeLists.txt  common.cmake
include/CrayonCore/: CrCommands  CrCore  CrLog  CrModule  CrMonitor  CrNode  CrNodeEditorWidget  CrNodeSettingsDialog  CrPlugin  CrPluginInterface  CrProject  CrProjectExplorerDialog  CrProjectModel  CrProjectModulesExplorerDialog  CrProjectModulesModel  CrProjectSettingsDialog  crayoncore_global.h  crcommands.h  crcore.h  crlog.h  crmodule.h  crmonitor.h  crnode.h  crnodeeditorwidget.h  crnodesettingsdialog.h  crplugin.h  crplugininterface.h  crproject.h  crprojectexplorerdialog.h  crprojectmodel.h  crprojectmodulesexplorerdialog.h  crprojectmodulesmodel.h  crprojectsettingsdialog.h
include/CrayonModbus/: CrModbusAbstractClient  CrModbusClientNode  CrModbusRequest  CrModbusRtuClient  CrModbusTcpClient  crayonmodbus_global.h  crmodbusabstractclient.h  crmodbusclientnode.h  crmodbusrequest.h  crmodbusrtuclient.h  crmodbustcpclient.h
include/CrayonQml/: CrQmlComponentNode  CrQmlModule  CrQmlMonitorNode  CrQmlNode  crayonqml_global.h  crqmlcomponentnode.h  crqmlmodule.h  crqmlmonitornode.h  crqmlnode.h
include/CrayonStandart/: CrBooleanNode  CrByteArrayNode  CrColorNode  CrComboBoxNode  CrFileNode  CrFontNode  CrGraphicsSceneNode  CrNumericNode  CrPointNode  CrRectNode  CrSizeNode  CrTextNode  crayonstandart_global.h  crbooleannode.h  crbytearraynode.h  crcolornode.h  crcomboboxnode.h  crfilenode.h  crfontnode.h  crgraphicsscenenode.h  crnumericnode.h  crpointnode.h  crrectnode.h  crserialportnode.h  crsizenode.h  crtextnode.h
src/CrayonCore/: CMakeLists.txt  CrayonCore_ru_RU.ts  crcommands.cpp  crcore.cpp  crlog.cpp  crmodule.cpp  crmonitor.cpp  crnode.cpp  crnodeeditorwidget.cpp  crnodesettingsdialog.cpp  crplugin.cpp  crproject.cpp  crprojectexplorerdialog.cpp  crprojectmodel.cpp  crprojectmodulesexplorerdialog.cpp  crprojectmodulesmodel.cpp  crprojectsettingsdialog.cpp  nodesettingsdialogconcept.ui  projectsettingsdialogconcept.ui
src/CrayonEditor/: CMakeLists.txt  CrayonEditor_ru_RU.ts  crgraphicseditor.cpp  crgraphicseditor.h  crgraphicseditorswidget.h.autosave  crpluginexplorermodel.cpp.autosave  crpluginexplorermodel.h.autosave  crprojecteditorstabwidget.cpp  crprojecteditorstabwidget.h  crprojectexplorer.cpp  crprojectexplorer.h  crprojectexplorerview.h.autosave  crprojectlogview.cpp  crprojectlogview.h  crprojectmodulesexplorer.cpp  crprojectmodulesexplorer.h  main.cpp  nodebrowser.ui  projecteditor.ui  qt.conf  qt_in.conf
src/CrayonEditor/ToolbarIcon/: toolbarIcon.qrc
src/CrayonEditor/resources/: resources.qrc
src/CrayonModbus/: CMakeLists.txt  CrayonModbusPlugin.pro  CrayonModbus_ru_RU.ts  crmodbusabstractclient.cpp  crmodbusclientnode.cpp  crmodbusrequest.cpp  crmodbusrtuclient.cpp  crmodbustcpclient.cpp
src/CrayonModbus/plugin/: CrayonModbusPlugin.json  crmodbusplugin.cpp  crmodbusplugin.h
src/CrayonModbus/resources/: Resources.qrc
src/CrayonMonitor/: CMakeLists.txt  CrayonMonitor.pro  CrayonMonitor_ru_RU.ts  crmonitormainwindow.cpp  crmonitormainwindow.h  main.cpp
src/CrayonOwen/: CMakeLists.txt  CrayonOwen_ru_RU.ts  OwenPlugin.json  OwenPlugin.pro  owenplugin.cpp  owenplugin.h
src/CrayonOwen/resources/: Resources.qrc
src/CrayonQml/: CMakeLists.txt  CrayonQml_ru_RU.ts  crqmlcomponentnode.cpp  crqmlmodule.cpp  crqmlmonitoritem.cpp  crqmlmonitoritem.h  crqmlmonitornode.cpp  crqmlmonitorwindow.cpp  crqmlmonitorwindow.h  crqmlnode.cpp
src/CrayonQml/desing/: 12.ai  13.ai  14.ai  Безымянный-1.ai  Безымянный-2.ai  Безымянный-3.ai
src/CrayonQml/module/: CMakeLists.txt  crqmlmetatype.cpp  crqmlmetatype.h  crqmlmoduleplugin.cpp  crqmlmoduleplugin.h  crqmlnodeextension.cpp  crqmlnodeextension.h  qmldir
src/CrayonQml/plugin/: CMakeLists.txt  CrayonQmlPlugin.json  crqmlplugin.cpp  crqmlplugin.h
src/CrayonQml/qml/: CMakeLists.txt  CrayonQmlModules_ru_RU.ts  Gauge.qml  Slider.qml
src/CrayonQml/resources/: CrNullItem.qml  CrQmlMonitorRubberBand.qml  CrQmlMonitorSelector.qml  Resources.qrc  TestQml.qml  ViewerRootObject.qml
src/CrayonStandart/: CMakeLists.txt  CrayonStandart_ru_RU.ts  crbooleannode.cpp  crbytearraynode.cpp  crcolornode.cpp  crcomboboxnode.cpp  crfilenode.cpp  crfontnode.cpp  crgraphicsscene.cpp  crgraphicsscene.h  crgraphicsscenenode.cpp  crgraphicsscenenodeeditor.cpp  crgraphicsscenenodeeditor.h  crgraphicsscenenodeitem.cpp  crgraphicsscenenodeitem.h  crnumericnode.cpp  crpointnode.cpp  crrectnode.cpp  crserialportnode.cpp  crsizenode.cpp  crtextnode.cpp  resources.qrc
src/CrayonStandart/plugin/: CMakeLists.txt  CrayonStandartPlugin.json  byteconverters.h  crstandartplugin.cpp  crstandartplugin.h
src/CrayonStandart/resources/: Resources.qrc
